# korean-jangbu-for

./: .gitignore  README.md
accounts/: nts_standard.json
mcp-server/: pyproject.toml
mcp-server/jangbu_mcp/: __main__.py  audit.py  credentials.py  file_types.py  masking.py  ocr.py  ocr_corrections.py  parsers.py  reports.py  rules.py  server.py  storage.py
mcp-server/jangbu_mcp/connectors/: __init__.py  codef.py
mcp-server/tests/: conftest.py  test_bank_csv.py  test_codef_mapping.py  test_credentials.py  test_file_types.py  test_masking.py  test_ocr_corrections.py  test_ocr_parser.py  test_ocr_structured.py  test_parsers.py  test_rules.py
rules/: seed_rules.json
scripts/: install.sh  seed.py  verify.sh
skills/jangbu-connect/: SKILL.md
skills/jangbu-dash/: SKILL.md
skills/jangbu-for/: SKILL.md
skills/jangbu-for-dash/: SKILL.md
skills/jangbu-for-import/: SKILL.md
skills/jangbu-for-jongso/: SKILL.md
skills/jangbu-for-tag/: SKILL.md
skills/jangbu-for-tax/: SKILL.md
skills/jangbu-import/: SKILL.md
skills/jangbu-jongso/: SKILL.md
skills/jangbu-tag/: SKILL.md
skills/jangbu-tax/: SKILL.md
skills/korean-jangbu-for/: SKILL.md
